// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-angler-ai destination: saveEvent action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "custom_event_name": "3mG!HxRA*^ARn)qHBi",
      "event_id": "3mG!HxRA*^ARn)qHBi",
      "event_name": "3mG!HxRA*^ARn)qHBi",
      "ip": "3mG!HxRA*^ARn)qHBi",
      "products": Array [
        Object {
          "price": 56515583855820.8,
          "productId": "3mG!HxRA*^ARn)qHBi",
          "quantity": 5651558385582080,
          "revenue": 56515583855820.8,
          "revenueType": "3mG!HxRA*^ARn)qHBi",
        },
      ],
      "referrer": "3mG!HxRA*^ARn)qHBi",
      "userAgent": "3mG!HxRA*^ARn)qHBi",
      "utm_properties": Object {
        "utm_campaign": "3mG!HxRA*^ARn)qHBi",
        "utm_content": "3mG!HxRA*^ARn)qHBi",
        "utm_medium": "3mG!HxRA*^ARn)qHBi",
        "utm_source": "3mG!HxRA*^ARn)qHBi",
        "utm_term": "3mG!HxRA*^ARn)qHBi",
      },
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveEvent action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "custom_event_name": "3mG!HxRA*^ARn)qHBi",
      "event_id": "3mG!HxRA*^ARn)qHBi",
      "event_name": "3mG!HxRA*^ARn)qHBi",
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveOrder action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "additional_fields": Array [
        Object {
          "name": "E0rNrwcK",
          "value": "E0rNrwcK",
        },
      ],
      "app_id": "E0rNrwcK",
      "billing_address": Object {
        "address1": "E0rNrwcK",
        "address2": "E0rNrwcK",
        "city": "E0rNrwcK",
        "company": "E0rNrwcK",
        "country": "E0rNrwcK",
        "country_code": "E0rNrwcK",
        "country_name": "E0rNrwcK",
        "customer_id": "E0rNrwcK",
        "default": true,
        "first_name": "E0rNrwcK",
        "hashed_address1": "E0rNrwcK",
        "hashed_address2": "E0rNrwcK",
        "hashed_city": "E0rNrwcK",
        "hashed_country_code": "E0rNrwcK",
        "hashed_first_name": "E0rNrwcK",
        "hashed_last_name": "E0rNrwcK",
        "hashed_phone": "E0rNrwcK",
        "hashed_zip": "E0rNrwcK",
        "id": "E0rNrwcK",
        "last_name": "E0rNrwcK",
        "name": "E0rNrwcK",
        "phone": "E0rNrwcK",
        "province": "E0rNrwcK",
        "province_code": "E0rNrwcK",
        "zip": "E0rNrwcK",
      },
      "browser_ip": "E0rNrwcK",
      "buyer_accepts_marketing": true,
      "cancel_reason": "E0rNrwcK",
      "cancelled_at": "E0rNrwcK",
      "checkout_id": "E0rNrwcK",
      "client_details": Object {
        "accept_language": "E0rNrwcK",
        "browser_height": -51347472609443.84,
        "browser_ip": "E0rNrwcK",
        "browser_width": -51347472609443.84,
        "session_hash": "E0rNrwcK",
        "user_agent": "E0rNrwcK",
      },
      "closed_at": "E0rNrwcK",
      "confirmed": true,
      "contact_email": "E0rNrwcK",
      "created_at": "E0rNrwcK",
      "currency": "KYD",
      "current_subtotal_price": "E0rNrwcK",
      "current_total_discounts": "E0rNrwcK",
      "current_total_price": "E0rNrwcK",
      "current_total_tax": "E0rNrwcK",
      "customer_id": "E0rNrwcK",
      "discount_applications": Array [
        Object {
          "allocation_method": "E0rNrwcK",
          "code": "E0rNrwcK",
          "target_selection": "E0rNrwcK",
          "target_type": "E0rNrwcK",
          "type": "E0rNrwcK",
          "value": "E0rNrwcK",
          "value_type": "E0rNrwcK",
        },
      ],
      "discount_codes": Array [
        Object {
          "amount": "E0rNrwcK",
          "code": "E0rNrwcK",
          "type": "E0rNrwcK",
        },
      ],
      "email": "giko@vowolo.pr",
      "estimated_taxes": true,
      "financial_status": "E0rNrwcK",
      "fulfillment_status": "E0rNrwcK",
      "fulfillments": Array [
        Object {
          "created_at": "E0rNrwcK",
          "id": "E0rNrwcK",
          "order_id": "E0rNrwcK",
          "shipment_status": "E0rNrwcK",
          "status": "E0rNrwcK",
          "tracking_company": "E0rNrwcK",
          "updated_at": "E0rNrwcK",
        },
      ],
      "gateway": "E0rNrwcK",
      "id": "E0rNrwcK",
      "landing_site": "E0rNrwcK",
      "landing_site_ref": "E0rNrwcK",
      "location_id": "E0rNrwcK",
      "name": "E0rNrwcK",
      "note": "E0rNrwcK",
      "note_attributes": Array [
        Object {
          "name": "E0rNrwcK",
          "value": "E0rNrwcK",
        },
      ],
      "number": -5134747260944384,
      "order_number": -5134747260944384,
      "payment_details": Object {
        "avs_result_code": "E0rNrwcK",
        "credit_card_bin": "E0rNrwcK",
        "credit_card_expiration_month": "E0rNrwcK",
        "credit_card_expiration_year": "E0rNrwcK",
        "credit_card_name": "E0rNrwcK",
        "credit_card_number": "E0rNrwcK",
        "credit_card_wallet": "E0rNrwcK",
        "cvv_result_code": "E0rNrwcK",
      },
      "phone": "E0rNrwcK",
      "presentment_currency": "E0rNrwcK",
      "processed_at": "E0rNrwcK",
      "processing_method": "E0rNrwcK",
      "reference": "E0rNrwcK",
      "referring_site": "E0rNrwcK",
      "shipping_address": Object {
        "address1": "E0rNrwcK",
        "address2": "E0rNrwcK",
        "city": "E0rNrwcK",
        "company": "E0rNrwcK",
        "country": "E0rNrwcK",
        "country_code": "E0rNrwcK",
        "country_name": "E0rNrwcK",
        "customer_id": "E0rNrwcK",
        "default": true,
        "first_name": "E0rNrwcK",
        "hashed_address1": "E0rNrwcK",
        "hashed_address2": "E0rNrwcK",
        "hashed_city": "E0rNrwcK",
        "hashed_country_code": "E0rNrwcK",
        "hashed_first_name": "E0rNrwcK",
        "hashed_last_name": "E0rNrwcK",
        "hashed_phone": "E0rNrwcK",
        "hashed_zip": "E0rNrwcK",
        "id": "E0rNrwcK",
        "last_name": "E0rNrwcK",
        "name": "E0rNrwcK",
        "phone": "E0rNrwcK",
        "province": "E0rNrwcK",
        "province_code": "E0rNrwcK",
        "zip": "E0rNrwcK",
      },
      "source_identifier": "E0rNrwcK",
      "source_name": "E0rNrwcK",
      "source_url": "E0rNrwcK",
      "subtotal_price": "E0rNrwcK",
      "tags": "E0rNrwcK",
      "taxes_included": true,
      "total_discounts": "E0rNrwcK",
      "total_line_items_price": "E0rNrwcK",
      "total_outstanding": "E0rNrwcK",
      "total_price": "E0rNrwcK",
      "total_price_usd": "E0rNrwcK",
      "total_tax": "E0rNrwcK",
      "total_tip_received": "E0rNrwcK",
      "updated_at": "E0rNrwcK",
      "user_id": "E0rNrwcK",
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveOrder action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "app_id": "E0rNrwcK",
      "checkout_id": "E0rNrwcK",
      "customer_id": "E0rNrwcK",
      "id": "E0rNrwcK",
      "location_id": "E0rNrwcK",
      "source_identifier": "E0rNrwcK",
      "user_id": "E0rNrwcK",
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveUser action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "accepts_marketing": false,
      "accepts_marketing_updated_at": "g[^FhJnb(lsNz",
      "additional_fields": Array [
        Object {
          "name": "g[^FhJnb(lsNz",
          "value": "g[^FhJnb(lsNz",
        },
      ],
      "addresses": Array [
        Object {
          "address1": "g[^FhJnb(lsNz",
          "address2": "g[^FhJnb(lsNz",
          "city": "g[^FhJnb(lsNz",
          "company": "g[^FhJnb(lsNz",
          "country": "g[^FhJnb(lsNz",
          "country_code": "g[^FhJnb(lsNz",
          "country_name": "g[^FhJnb(lsNz",
          "customer_id": "g[^FhJnb(lsNz",
          "default": false,
          "first_name": "g[^FhJnb(lsNz",
          "hashed_address1": "g[^FhJnb(lsNz",
          "hashed_address2": "g[^FhJnb(lsNz",
          "hashed_city": "g[^FhJnb(lsNz",
          "hashed_country_code": "g[^FhJnb(lsNz",
          "hashed_first_name": "g[^FhJnb(lsNz",
          "hashed_last_name": "g[^FhJnb(lsNz",
          "hashed_phone": "g[^FhJnb(lsNz",
          "hashed_zip": "g[^FhJnb(lsNz",
          "id": "g[^FhJnb(lsNz",
          "last_name": "g[^FhJnb(lsNz",
          "name": "g[^FhJnb(lsNz",
          "phone": "g[^FhJnb(lsNz",
          "province": "g[^FhJnb(lsNz",
          "province_code": "g[^FhJnb(lsNz",
          "zip": "g[^FhJnb(lsNz",
        },
      ],
      "created_at": "g[^FhJnb(lsNz",
      "currency": "DZD",
      "default_address": Object {
        "address1": "g[^FhJnb(lsNz",
        "address2": "g[^FhJnb(lsNz",
        "city": "g[^FhJnb(lsNz",
        "company": "g[^FhJnb(lsNz",
        "country": "g[^FhJnb(lsNz",
        "country_code": "g[^FhJnb(lsNz",
        "country_name": "g[^FhJnb(lsNz",
        "customer_id": "g[^FhJnb(lsNz",
        "default": false,
        "first_name": "g[^FhJnb(lsNz",
        "hashed_address1": "g[^FhJnb(lsNz",
        "hashed_address2": "g[^FhJnb(lsNz",
        "hashed_city": "g[^FhJnb(lsNz",
        "hashed_country_code": "g[^FhJnb(lsNz",
        "hashed_first_name": "g[^FhJnb(lsNz",
        "hashed_last_name": "g[^FhJnb(lsNz",
        "hashed_phone": "g[^FhJnb(lsNz",
        "hashed_zip": "g[^FhJnb(lsNz",
        "id": "g[^FhJnb(lsNz",
        "last_name": "g[^FhJnb(lsNz",
        "name": "g[^FhJnb(lsNz",
        "phone": "g[^FhJnb(lsNz",
        "province": "g[^FhJnb(lsNz",
        "province_code": "g[^FhJnb(lsNz",
        "zip": "g[^FhJnb(lsNz",
      },
      "email": "zav@eja.hm",
      "email_marketing_consent": Object {
        "consent_updated_at": "g[^FhJnb(lsNz",
        "opt_in_level": "g[^FhJnb(lsNz",
        "state": "g[^FhJnb(lsNz",
      },
      "first_name": "g[^FhJnb(lsNz",
      "hashed_email": "g[^FhJnb(lsNz",
      "hashed_first_name": "g[^FhJnb(lsNz",
      "hashed_last_name": "g[^FhJnb(lsNz",
      "hashed_phone": "g[^FhJnb(lsNz",
      "id": "g[^FhJnb(lsNz",
      "last_name": "g[^FhJnb(lsNz",
      "last_order_id": "g[^FhJnb(lsNz",
      "last_order_name": "g[^FhJnb(lsNz",
      "marketing_opt_in_level": "g[^FhJnb(lsNz",
      "metafield": Object {
        "key": "g[^FhJnb(lsNz",
        "namespace": "g[^FhJnb(lsNz",
        "type": "g[^FhJnb(lsNz",
        "value": "g[^FhJnb(lsNz",
      },
      "note": "g[^FhJnb(lsNz",
      "orders_count": 9227457181777.92,
      "phone": "g[^FhJnb(lsNz",
      "sms_marketing_consent": Object {
        "consent_collected_from": "g[^FhJnb(lsNz",
        "consent_updated_at": "g[^FhJnb(lsNz",
        "opt_in_level": "g[^FhJnb(lsNz",
        "state": "g[^FhJnb(lsNz",
      },
      "state": "INVITED",
      "tags": "g[^FhJnb(lsNz",
      "tax_exempt": false,
      "total_spent": "g[^FhJnb(lsNz",
      "updated_at": "g[^FhJnb(lsNz",
      "verified_email": false,
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveUser action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "id": "g[^FhJnb(lsNz",
      "last_order_id": "g[^FhJnb(lsNz",
    },
  ],
  "src": "SEGMENT",
}
`;
